# MessengerApp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
CMake/: Conan.cmake
SourceFiles/: CMakeLists.txt  Main.qml  main.cxx
