project(MessengerApp VERSION 1.0 LANGUAGES CXX)

set(CXX_SOURCE_FILES main.cxx)
set(QML_SOURCE_FILES Main.qml)

qt_add_executable(${PROJECT_NAME})

qt_add_qml_module(${PROJECT_NAME}
    URI ${PROJECT_NAME}
    VERSION ${PROJECT_VERSION}
    SOURCES ${CXX_SOURCE_FILES}
    QML_FILES ${QML_SOURCE_FILES}
)

set_target_properties(${PROJECT_NAME} PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER com.refraction.${PROJECT_NAME}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt6::Core
    Qt6::Quick
    fmt::fmt
)